--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,7 +70,7 @@ input:focus, textarea:focus, select:focus {
 }
 
 @media (min-width:1700px) {
-	main .container {
+	main {
 		max-width: 100%;
 		padding: 0 150px;
 	}
